--- a/style.css
+++ b/style.css
@@ -12,3 +12,13 @@ body{
   align-items: center;
   justify-content: center;
 }
+
+.container{
+  position:relative;
+  width:calc(850px + 16px);
+  height:calc(350px + 16px);
+  background-color:#333;
+  border:8px solid #fff;
+  transform-style:preserve-3d;
+  transform:perspective(500px);
+}
